Fix : Gap issues on Work Experience

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,7 +148,7 @@ body {
   }
 
   .container-md {
-    @apply max-w-screen-md min-h-min p-16 sm:p-16 lg:pt-24;
+    @apply max-w-screen-md min-h-min p-8 sm:p-16 lg:pt-24;
   }
 
   .container-lg {
